--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -18,17 +18,17 @@
     <ion-grid>
       <ion-row>
         <ion-col><ion-img routerLink="/route-choice" src="assets/image/route-choice.png"></ion-img> </ion-col>
-        <ion-col><ion-img src="assets/image/matching-route.png"></ion-img></ion-col>
-        <ion-col><ion-img src="assets/image/share-route.png"></ion-img></ion-col>
+        <ion-col><ion-img routerLink="/matching-route/route-info" src="assets/image/matching-route.png"></ion-img></ion-col>
+        <ion-col><ion-img routerLink="/share-route/share" src="assets/image/share-route.png"></ion-img></ion-col>
       </ion-row>
       <ion-row>
-        <ion-col><ion-img src="assets/image/access-route.png"></ion-img> </ion-col>
-        <ion-col><ion-img src="assets/image/assign-route.png"></ion-img></ion-col>
+        <ion-col><ion-img routerLink="/access-route/home" src="assets/image/access-route.png"></ion-img> </ion-col>
+        <ion-col><ion-img routerLink="/route-choice" src="assets/image/assign-route.png"></ion-img></ion-col>
         <ion-col><ion-img src="assets/image/route-page.png"></ion-img></ion-col>
       </ion-row>
       <ion-row>
         <ion-col><ion-img src="assets/image/manager-list.png"></ion-img> </ion-col>
-        <ion-col><ion-img src="assets/image/security-dashboard.png"></ion-img></ion-col>
+        <ion-col><ion-img routerLink="/seurity" src="assets/image/security-dashboard.png"></ion-img></ion-col>
         <ion-col><ion-img src="assets/image/report-dashboard.png"></ion-img></ion-col>
       </ion-row>
     </ion-grid>
