--- a/src/app/share-route/share/share.component.html
+++ b/src/app/share-route/share/share.component.html
@@ -34,7 +34,7 @@
           <ion-input label="Enter your phone number" color="success" labelPlacement="floating" fill="outline"  placeholder="+234"></ion-input>
           <ion-input label="Enter loading route" color="success" type="password" fill="outline" labelPlacement="floating" placeholder=""></ion-input>
          
-          <ion-select label="Vehicle Type" color="success" labelPlacement="floating" fill="outline" aria-label="fruit" placeholder="Select vehicle type">
+          <ion-select label="Loading Point Type" color="success" labelPlacement="floating" fill="outline" aria-label="fruit" placeholder="Select loading point type">
            <ion-select-option value="Terminal">Terminal</ion-select-option>
            <ion-select-option value="Garage">Garage</ion-select-option>
            <ion-select-option value="Ferry Station">Ferry Station</ion-select-option>
