--- a/src/app/auth/signup-passenger/signup-passenger.component.scss
+++ b/src/app/auth/signup-passenger/signup-passenger.component.scss
@@ -32,3 +32,14 @@ ion-input {
     margin-top: 15px;
     margin-bottom: 15px;
 }
+
+.upload-container {
+    border: 1px dashed red;
+    border-radius: .5rem;
+    padding: 1rem;
+
+    .upload-img {
+        width: 100%;
+        height: 130px;
+    }
+}
