--- a/src/app/share-route/live-loading/live-loading.component.html
+++ b/src/app/share-route/live-loading/live-loading.component.html
@@ -30,7 +30,7 @@
               <ion-list>
                 <ion-item>
                   <ion-col size="6">
-                    <ion-label class="section-title">Loading Point</ion-label>
+                    <ion-label class="section-title">Loading Route</ion-label>
                   </ion-col>
                   <ion-col size="6">
                     <ion-item>Lagos - Abuja</ion-item>
@@ -93,7 +93,7 @@
               <ion-list>
                 <ion-item>
                   <ion-col size="6">
-                    <ion-label class="section-title">Loading Point</ion-label>
+                    <ion-label class="section-title">Loading Route</ion-label>
                   </ion-col>
                   <ion-col size="6">
                     <ion-item>Lagos - TOGO</ion-item>
