--- a/src/app/share-route/loading-record/loading-record.component.html
+++ b/src/app/share-route/loading-record/loading-record.component.html
@@ -23,7 +23,7 @@
       <ion-input label="Search date " labelPlacement="floating" fill="outline" type="date" placeholder="dd/MM/yyyy"></ion-input>
     </ion-col>
     <ion-col size="2">
-      <ion-button>
+      <ion-button class="button">
         <ion-icon class="search-button" name="search"></ion-icon>
       </ion-button>
 
@@ -46,7 +46,7 @@
               <ion-list>
                 <ion-item>
                   <ion-col size="6">
-                    <ion-label class="section-title">Loading Point</ion-label>
+                    <ion-label class="section-title">Loading Route</ion-label>
                   </ion-col>
                   <ion-col size="6">
                     <ion-item>Lagos - Abuja</ion-item>
@@ -100,7 +100,7 @@
               <ion-list>
                 <ion-item>
                   <ion-col size="6">
-                    <ion-label class="section-title">Loading Point</ion-label>
+                    <ion-label class="section-title">Loading Route</ion-label>
                   </ion-col>
                   <ion-col size="6">
                     <ion-item>Lagos - TOGO</ion-item>
